--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,15 @@
 [PERSONAL_INFO]
 ; Account and current appointment info from https://ais.usvisa-info.com
-USERNAME = account@gmail.com
-PASSWORD = account_pass
+USERNAME = veraldilek@gmail.com
+PASSWORD = Dilver123
 ; Find SCHEDULE_ID in re-schedule page link:
-; https://ais.usvisa-info.com/en-am/niv/schedule/{SCHEDULE_ID}/appointment
-SCHEDULE_ID = 99999999
+; https://ais.usvisa-info.com/en-tr/niv/schedule/{SCHEDULE_ID}/appointment
+SCHEDULE_ID = 54965754
 ; Target Period:
-PRIOD_START = 2023-03-20
-PRIOD_END = 2023-06-01
+PRIOD_START = 2025-05-01
+PRIOD_END = 2025-12-31
 ; Change "en-am-yer", based on your embassy Abbreviation in embassy.py list.
-YOUR_EMBASSY = en-am-yer
+YOUR_EMBASSY = en-tr-ist
 
 [CHROMEDRIVER]
 ; Details for the script to control Chrome
